# trusim-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
src/: config.py  main.py
src/agent/: memory.py  prompts.py  workforce_agent.py
src/api/: routes.py  server.py  ws.py
src/tools/: __init__.py  absence_tools.py  anomaly_tools.py  nokia_tools.py  prediction_tools.py  report_tools.py  shift_tools.py  worker_tools.py
